request fixes
